# aoc2025

./: .clang-format  CMakeLists.txt  README.md  build.sh
day01/: live_data.hpp  main.cpp  test_data.hpp
day02/: live_data.hpp  main.cpp  test_data.hpp
day03/: live_data.hpp  main.cpp  test_data.hpp
day04/: live_data.hpp  main.cpp  test_data.hpp
day05/: live_data.hpp  main.cpp  test_data.hpp
day06/: live_data.hpp  main.cpp  test_data.hpp
